<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/explorer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_explore"
    tools:context=".explorer">


    <TextView
        android:id="@+id/text_on_image"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="10"
        android:shadowDy="1"
        android:shadowRadius="10"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bgcard"
        android:src="@drawable/cardbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="402dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:shadowColor="@android:color/black"
        android:text="@string/choose_a_course_to_get_started"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_image_view" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/html_button"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/html" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/css_button"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/css" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="36dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/python_button"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pythonimg" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/javascript_button"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/javascriptimg" />


</androidx.constraintlayout.widget.ConstraintLayout>
