<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_explore"
    tools:context=".welcome">


    <TextView
        android:id="@+id/text_on_image"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:padding="8dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="10"
        android:shadowDy="1"
        android:shadowRadius="10"
        android:text="@string/welcome_to_gamecoded"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-20dp"
        android:contentDescription="@string/my_image_view1"
        android:src="@drawable/image" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/signin_screen"
            android:layout_width="390dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#00B9ED"
            android:padding="4dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="10"
            android:shadowDy="1"
            android:shadowRadius="10"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/signup_screen"
            android:layout_width="390dp"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#00B9ED"
            android:padding="4dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="10"
            android:shadowDy="1"
            android:shadowRadius="10"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

    </LinearLayout>
</RelativeLayout>